--- a/index.html
+++ b/index.html
@@ -3,66 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
     <title>Weather Dashboard</title>
+    <link rel="stylesheet" href="styles.css"> 
 </head>
 <body>
-    <div class="header">
-        <h1>PERTH</h1>
-        <div class="nav">
-            <button onclick="location.href='home.html'">HOME</button>
-            <button onclick="location.href='about.html'">ABOUT</button>
+    <div class="navbar">
+        <div class="logo">PERTH</div>
+        <div class="menu">
+            <button>HOME</button>
+            <button>ABOUT</button>
         </div>
+        <div class="icon">🌑</div>
     </div>
 
     <div class="weather-today">
-        <div class="date">
-            <h2>DATE</h2>
-            <div class="icon"></div> <!-- Weather icon placeholder -->
-        </div>
-        <div class="data">
-            <div class="humidity">Humidity (Today): <span>(NUMBER)</span></div>
-            <div class="hottest-temp">Hottest Temp (Today): <span>(NUMBER)</span></div>
-            <div class="coldest-temp">Coldest Temp (Today): <span>(NUMBER)</span></div>
-            <div class="uv-index">UV Index: <span>(NUMBER)</span></div>
-            <div class="windspeed">Windspeed (Today): <span>(NUMBER)</span></div>
-            <div class="precipitation">Precipitation: <span>(NUMBER)</span></div>
-        </div>
+        <div class="date">DATE</div>
+        <div class="weather-icon"></div> <!-- Placeholder for weather icon -->
+        <div class="weather-text">WEATHER TODAY (16°)</div>
+    </div>
+
+    <div class="weather-stats">
+        <div class="stat">Humidity (Today): <span id="humidity">--</span>%</div>
+        <div class="stat">Hottest Temp (Today): <span id="hottest-temp">--</span>°</div>
+        <div class="stat">Coldest Temp (Today): <span id="coldest-temp">--</span>°</div>
+        <div class="stat">UV (Today): <span id="uv">--</span></div>
+        <div class="stat">Wind Speed (Today): <span id="windspeed">--</span> km/h</div>
+        <div class="stat">Precipitation (Today): <span id="precipitation">--</span> mm</div>
     </div>
 
     <div class="weekly-forecast">
-        <div class="day">
-            <div class="day-name">MON</div>
-            <div class="high-low">High: XX° Low: XX°</div>
-        </div>
-        <div class="day">
-            <div class="day-name">TUE</div>
-            <div class="high-low">High: XX° Low: XX°</div>
-        </div>
-        <div class="day">
-            <div class="day-name">WED</div>
-            <div class="high-low">High: XX° Low: XX°</div>
-        </div>
-        <div class="day">
-            <div class="day-name">THU</div>
-            <div class="high-low">High: XX° Low: XX°</div>
-        </div>
-        <div class="day">
-            <div class="day-name">FRI</div>
-            <div class="high-low">High: XX° Low: XX°</div>
-        </div>
-        <div class="day">
-            <div class="day-name">SAT</div>
-            <div class="high-low">High: XX° Low: XX°</div>
-        </div>
-        <div class="day">
-            <div class="day-name">SUN</div>
-            <div class="high-low">High: XX° Low: XX°</div>
-        </div>
+        <div class="day">MON <div class="icon"></div> High: XX° Low: XX°</div>
+        <div class="day">TUE <div class="icon"></div> High: XX° Low: XX°</div>
+        <div class="day">WED <div class="icon"></div> High: XX° Low: XX°</div>
+        <div class="day">THU <div class="icon"></div> High: XX° Low: XX°</div>
+        <div class="day">FRI <div class="icon"></div> High: XX° Low: XX°</div>
+        <div class="day">SAT <div class="icon"></div> High: XX° Low: XX°</div>
+        <div class="day">SUN <div class="icon"></div> High: XX° Low: XX°</div>
     </div>
 
-    <footer>
-        <p>&copy; 2024 Weather Dashboard</p>
-    </footer>
+    <script src="script.js"></script>
 </body>
 </html>
