--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <div class="navbar">
-        <div class="logo">PERTH</div>
+        <div class="logo"> 
+            <div class="city-title">PERTH</div>
+        </div>
         <div class="menu">
             <button>HOME</button>
             <button>ABOUT</button>
