--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <button>HOME</button>
             <button>ABOUT</button>
         </div>
-        <div class="icon">🌑</div>
+        <div class="icon moon-icon"></div> <!-- Placeholder for moon icon -->
     </div>
 
     <div class="weather-container">
