--- a/index.html
+++ b/index.html
@@ -57,30 +57,37 @@
         <div class="day-box">
             <div class="day-name">MON</div>
             <div class="day-temp">High: XX° Low: XX°</div>
+            <div class="emoji">☀️</div> <!-- Sunny emoji -->
         </div>
         <div class="day-box">
             <div class="day-name">TUE</div>
             <div class="day-temp">High: XX° Low: XX°</div>
+            <div class="emoji">☁️</div> <!-- Cloudy emoji -->
         </div>
         <div class="day-box">
             <div class="day-name">WED</div>
             <div class="day-temp">High: XX° Low: XX°</div>
+            <div class="emoji">🌧️</div> <!-- Cloud raining emoji -->
         </div>
         <div class="day-box">
             <div class="day-name">THU</div>
             <div class="day-temp">High: XX° Low: XX°</div>
+            <div class="emoji">⛈️</div> <!-- Thunderstorm cloud emoji -->
         </div>
         <div class="day-box">
             <div class="day-name">FRI</div>
             <div class="day-temp">High: XX° Low: XX°</div>
+            <div class="emoji">🌨️</div> <!-- Cloud snowing emoji -->
         </div>
         <div class="day-box">
             <div class="day-name">SAT</div>
             <div class="day-temp">High: XX° Low: XX°</div>
+            <div class="emoji">💨</div> <!-- Windy emoji -->
         </div>
         <div class="day-box">
             <div class="day-name">SUN</div>
             <div class="day-temp">High: XX° Low: XX°</div>
+            <div class="emoji">☀️</div> <!-- Sunny emoji -->
         </div>
     </div>
 
