--- a/index.html
+++ b/index.html
@@ -56,37 +56,58 @@
     <div class="weekly-forecast">
         <div class="day-box">
             <div class="day-name">MON</div>
-            <div class="day-temp">High: XX° Low: XX°</div>
+            <div class="day-temp">
+                <div class="high-temp">High: XX°</div>
+                <div class="low-temp">Low: XX°</div>
+            </div>
             <div class="emoji">☀️</div> <!-- Sunny emoji -->
         </div>
         <div class="day-box">
             <div class="day-name">TUE</div>
-            <div class="day-temp">High: XX° Low: XX°</div>
+            <div class="day-temp">
+                <div class="high-temp">High: XX°</div>
+                <div class="low-temp">Low: XX°</div>
+            </div>
             <div class="emoji">☁️</div> <!-- Cloudy emoji -->
         </div>
         <div class="day-box">
             <div class="day-name">WED</div>
-            <div class="day-temp">High: XX° Low: XX°</div>
+            <div class="day-temp">
+                <div class="high-temp">High: XX°</div>
+                <div class="low-temp">Low: XX°</div>
+            </div>
             <div class="emoji">🌧️</div> <!-- Cloud raining emoji -->
         </div>
         <div class="day-box">
             <div class="day-name">THU</div>
-            <div class="day-temp">High: XX° Low: XX°</div>
+            <div class="day-temp">
+                <div class="high-temp">High: XX°</div>
+                <div class="low-temp">Low: XX°</div>
+            </div>
             <div class="emoji">⛈️</div> <!-- Thunderstorm cloud emoji -->
         </div>
         <div class="day-box">
             <div class="day-name">FRI</div>
-            <div class="day-temp">High: XX° Low: XX°</div>
+            <div class="day-temp">
+                <div class="high-temp">High: XX°</div>
+                <div class="low-temp">Low: XX°</div>
+            </div>
             <div class="emoji">🌨️</div> <!-- Cloud snowing emoji -->
         </div>
         <div class="day-box">
             <div class="day-name">SAT</div>
-            <div class="day-temp">High: XX° Low: XX°</div>
+            <div class="day-temp">
+                <div class="high-temp">High: XX°</div>
+                <div class="low-temp">Low: XX°</div>
+            </div>
             <div class="emoji">💨</div> <!-- Windy emoji -->
         </div>
         <div class="day-box">
             <div class="day-name">SUN</div>
-            <div class="day-temp">High: XX° Low: XX°</div>
+            <div class="day-temp">
+                <div class="high-temp">High: XX°</div>
+                <div class="low-temp">Low: XX°</div>
+            </div>
             <div class="emoji">☀️</div> <!-- Sunny emoji -->
         </div>
     </div>
